Added support for requesting the user's location. Currently just constantly get the latest of the user's location and update a label with the location's lat and long coords.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location when open in order to get your device's GPS coordinates and log them for future mapping.</string>
 </dict>
 </plist>
