--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+
+  # Enables requesting the user's location from GPS.
+  geolocator: ^6.1.14
 
 dev_dependencies:
   flutter_test:
